# crispy_app

./: .Rprofile  .gitignore  .lintr  Dockerfile  README.md  application.yml  pyproject.toml
app/: main.R
app/data/: backend_trajectories_data.parquet  backend_trisk_run_data.parquet
app/logic/: cloud_logic.R  company_search.R  constant.R  data_load.R  data_write.R  renamings.R  scenario_time_plot.R  trisk_button_logic.R  trisk_generation.R  trisk_mgmt.R
app/logic/mlflow_mgmt/: trisk_mlflow.R
app/logic/plots/: crispy_npv_change_plot.R  exposure_change_plot.R  scenario_time_plot.R
app/view/: crispy_equities.R  crispy_loans.R  equity_change_plots.R  homepage.R  menus.R  params_dimensions.R  params_picker.R  params_scenarios.R  params_trisk.R  portfolio.R  portfolio_analysis.R  portfolio_creator.R  portfolio_edition.R  portfolio_upload.R  sidebar_parameters.R  tab_equities.R  tab_loans.R  trajectories_plots.R  trisk_generator.R
app/view/modules/: menus.R  params_dimensions.R  params_scenarios.R  params_trisk.R  plots_equity_change.R  plots_loans.R  portfolio_analysis.R  portfolio_edition.R  portfolio_mgmt.R  portfolio_search.R  portfolio_upload.R  rows_edition.R  search_module.R  (+4 more)
scripts/: creds.R
scripts/backend_data_generation/: download_app_backend_data.R
scripts/generate_synthetic_data/: gen_synthetic_crispy.R
scripts/shinyproxy/: application.yml
scripts/trisk_k8s_api/: app-deployment.yaml  readme.md  trisk_compute.R
scripts/trisk_knative/: Dockerfile  api.R  app-service.yaml  main.R  readme.md  trisk_compute.R
tests/testthat/: test-trisk_mgmt.R
(+9 files in other folders)
