[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["bertrand <bertrand.gallice.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
